feat: add user and menu

--- a/liquibase.properties
+++ b/liquibase.properties
@@ -1,5 +1,5 @@
-changeLogFile=db/changelog/db.changelog-master.sql
-url=jdbc:postgresql://localhost:5432/boost-daily
+changeLogFile=app/db/changelog/db.changelog-master.sql
+url=jdbc:postgresql://localhost:5432/crewsakan
 username=postgres
-password=postgres
+password=postgre
 driver=org.postgresql.Driver
