feat : menu, merchant, order, wishlist and gen AI

--- a/liquibase.properties
+++ b/liquibase.properties
@@ -1,5 +1,5 @@
 changeLogFile=app/db/changelog/db.changelog-master.sql
 url=jdbc:postgresql://localhost:5432/crewsakan
 username=postgres
-password=postgre
+password=postgres
 driver=org.postgresql.Driver
